--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -505,6 +505,7 @@ version 28-git (????-??-??):
   - improvement: show network node names in network device selection list to be connected
     to current network device [chilan]
   - enhancement: show assigned network device count on network node list [chilan]
+  - enhancement: show network node info in rows which represent connected network devices [chilan]
 
 version 27.0 (2021-08-20):
 
