--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -507,6 +507,7 @@ version 28-git (????-??-??):
   - enhancement: show assigned network device count on network node list [chilan]
   - enhancement: show network node info in rows which represent connected network devices [chilan]
   - enhancement: 'without start date' assignment filter added in customer search form [chilan]
+  - improvement: show customer id for addresses in 'merge' mode lms-teryt.php script [chilan]
 
 version 27.0 (2021-08-20):
 
