--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -508,6 +508,7 @@ version 28-git (????-??-??):
   - enhancement: show network node info in rows which represent connected network devices [chilan]
   - enhancement: 'without start date' assignment filter added in customer search form [chilan]
   - improvement: show customer id for addresses in 'merge' mode lms-teryt.php script [chilan]
+  - enhancement: added division property to network devices [chilan]
 
 version 27.0 (2021-08-20):
 
