--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -521,6 +521,7 @@ version 28-git (????-??-??):
     specify building base provider which should be used [chilan]
   - enhancement: 'phpui.allowed_link_technologies' and 'sidusis.allowed_link_technologies' with default
     empty values allow to limit link technology selection lists in user interface [chilan]
+  - enhancement: added estimated completion date property to investment projects [chilan]
 
 version 27.0 (2021-08-20):
 
