enhancement: multi network selection in new message form (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -535,6 +535,7 @@ version 28-git (????-??-??):
   - enhancement: added preliminary en_GB localisation support [chilan]
   - improvement: 'invoices.qr2pay_comment' configuration variable supports %cid substitution
     symbol [chilan]
+  - enhancement: multi network selection in new message form [chilan]
 
 version 27.0 (2021-08-20):
 
