--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -543,6 +543,7 @@ version 28-git (????-??-??):
   - enhancement: show link properties (type and technology) in node details popup of openlayers
     map [chilan]
   - improvement: close openlayer map popups after mouse double click on them [chilan]
+  - enhancement: quick search network devices by location address [chilan]
 
 version 27.0 (2021-08-20):
 
