--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -545,6 +545,9 @@ version 28-git (????-??-??):
   - improvement: close openlayer map popups after mouse double click on them [chilan]
   - enhancement: quick search network devices by location address [chilan]
   - improvement: multi customer group selection in balance list report [chilan]
+  - improvement: balance list report: allow to customise visibility of customer id, ssn, ten
+    and address [chilan]
+  - improvement: balance list report: show only form selected value columns in table [chilan]
 
 version 27.0 (2021-08-20):
 
