improvement: added 'technical verification' event type (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -550,6 +550,7 @@ version 28-git (????-??-??):
   - improvement: balance list report: show only form selected value columns in table [chilan]
   - enhancement: added click-triggered popup as hint icon near network name of customer nodes box/panel
     in which VLAN id and network notes are displayed [chilan]
+  - improvement: added 'technical verification' event type [chilan]
 
 version 27.0 (2021-08-20):
 
