--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -563,6 +563,8 @@ version 28-git (????-??-??):
     'sidusis.operator_project_phone', 'siis.header' to 'uke.sidusis_operator_offer_url',
     'uke.sidusis_operator_project_email', 'uke.sidusis_operator_project_phone', 'uke.siis_header' [chilan]
   - devel/cleanup: renamed 'sidusis.allowed_link_technologies' to 'uke.sidusis_allowed_link_technologies' [chilan]
+  - enhancement: implemented --scope/--scopes script parameter support which allows to specify if customers,
+    users or both should be notified (handled only by selected notification types) [chilan]
 
 version 27.0 (2021-08-20):
 
