enhancement: 'documents.default_type' configuraton variable controls what document type is pre-selected in documentadd and documentgen forms (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -567,6 +567,8 @@ version 28-git (????-??-??):
     users or both should be notified (handled only by selected notification types) [chilan]
   - improvement: unified (customer and user) special symbol support in events-type notification message
     and subject configuration [chilan]
+  - enhancement: 'documents.default_type' configuraton variable controls what document type is pre-selected
+    in documentadd and documentgen forms [chilan]
 
 version 27.0 (2021-08-20):
 
