enhancement: don't show customer sensible data for regular users and store all requested views of such users in transaction log; new permission 'customer_sensible_data' allows to disable this mechanism for selected users (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -577,6 +577,9 @@ version 28-git (????-??-??):
   - enhancement: 'netstork.web_url' (without default value) and 'netstork.map_zoom_range' (with default
     value of '18') [interduo/chilan]
   - enhancement: implemented validity intervals for numbering plans [chilan]
+  - enhancement: don't show customer sensible data for regular users and store all requested sensible data views
+    in transaction log; new permission 'customer_sensible_data' allows to disable this mechanism
+    for selected users [chilan]
 
 version 27.0 (2021-08-20):
 
