--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -578,7 +578,7 @@ version 28-git (????-??-??):
     value of '18') [interduo/chilan]
   - enhancement: implemented validity intervals for numbering plans [chilan]
   - enhancement: don't show customer sensible data for regular users and store all requested sensible data views
-    in transaction log; new permission 'customer_sensible_data' allows to disable this mechanism
+    in transaction log; new permission 'customer_sensitive_data_view' allows to disable this mechanism
     for selected users [chilan]
 
 version 27.0 (2021-08-20):
