improvement: show warning when changing privacy status flag (variable: timetable.warn_privacy_status_change, default:false)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -583,6 +583,8 @@ version 28-git (????-??-??):
   - enhancement: added new option to 'sale registry' report which allows to check matches between document
     content service types and service type form filter [chilan]
   - enhancement: 'commited'/'not commited' assignment filter in customer search form [chilan]
+  - improvement: show warning when changing privacy status flag
+  (variable: timetable.warn_privacy_status_change, default:false) [interduo]
 
 version 27.0 (2021-08-20):
 
