improvement: allow to search node sessions using mac address fragment (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -586,7 +586,8 @@ version 28-git (????-??-??):
   - improvement: show warning when changing privacy status flag
     (configuration variable: timetable.privacy_status_change_warning, default:false) [interduo]
   - improvement: multi customer group selection is possible in document generation form [chilan]
-
+  - improvement: allow to search for node sessions using mac address fragment [chilan]
+  
 version 27.0 (2021-08-20):
 
   - enhancement: require user selection in event(add/edit) forms,
