--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -591,6 +591,8 @@ version 28-git (????-??-??):
     'uke.sidusis_map_url' and 'uke.sidusis_default_map_zoom' (default: 20) [interduo]
   - improvement: '%title' symbol is replaced by document title during document send via mail [chilan]
   - enhancement: added new indicator - outdated tickets [interduo]
+  - enhancement: lms-sidusis.php script for reporting ranges and importing internet
+  demands as a tickets [interduo]
 
 version 27.0 (2021-08-20):
 
